# easysend

./: .gitattributes  .gitignore  README.md  package.json  tsconfig.json  vite.config.ts
src/: index.html  main.ts  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs  ssh.rs  storage.rs
src-tauri/src/commands/: connection.rs  mod.rs  profiles.rs  transfer.rs
src/components/: app-shell.ts
src/services/: tauri-bridge.ts  validation.ts
src/stores/: connection-store.ts  profile-store.ts
