[package]
name = "easysend"
version = "1.0.0"
edition = "2021"

[lib]
name = "easysend_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "easysend"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
ssh2 = "0.9"
keyring = { version = "3", features = ["sync-secret-service"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
dirs = "5"
anyhow = "1"
chrono = "0.4"
